<resources>
    <string name="app_name">mCURA Queue Management</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="loading_message">Loading...</string>
    <string name="searchby">Search by:</string>
    <string name="nature">Nature : </string>
    <string name="appointment_name">Appointment Name :</string>
    <string name="postdate">Post Date</string>
    <string name="appointment_time">Appointment Time :</string>
    <string-array name="select_hospital">
        <item>Select Hospital</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="error_detected">TAG NOT DETECTED. WHERE DO YOU WANT WRITE!?!?</string>
    <string name="ok_writing">WRITTEN YOUR TAG SUCCESSFULLY!!</string>
    <string name="error_writing">ERROR DURING WRITING. ARE YOU SURE THAT YOUR TAG IS CLOSE TO YOUR MOBILE PHONE?</string>
    <string name="ok_detection">TAG DETECTED: </string>
    <string name="title_activity_read_nfctag">ReadNFCTag</string>
    <string name="payment_mode">PAYMENT MODE:</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="cheque">cheque</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="save_data_msg">Are you sure you want store Data and generate bill?</string>
    <string name="logout_msg">Are you sure you want logout?</string>
    <string name="exit_msg">Are you sure you want to quit this app?</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="_cancel">Cancel</string>
    <string name="_submit">Submit</string>
    <string name="hospital_id">Hospital ID:</string>
    <string name="patient_name">Patient Name</string>
    <string name="dob">DOB</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="_age">Age</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="add_address">Add Address</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="zip_code">Zip Code</string>
    <string name="_patient_name">Patient Name</string>
    <string name="_line">|</string>
    <string name="xxy">xxY</string>
    <string name="_line_">|</string>
    <string name="gender">Gender</string>
    <string name="hospital_id_">Hospital ID:</string>
    <string name="_0000">0000</string>
    <string name="__line">|</string>
    <string name="mrno">MRNO:</string>
    <string name="_0000_">0000</string>
    <string name="__Line">|</string>
    <string name="ph">Ph:</string>
    <string name="_9999999999">9999999999</string>
    <string name="_mobile">Mobile</string>
    <string name="_email_id">Email Id</string>
    <string name="_his_no">HIS No</string>
    <string name="_select_doctor">Select Doctor</string>
    <string name="est_id">Est Id</string>
    <string name="order_id">Order Id</string>
    <string name="days">Days</string>
    <string name="amount">Amount</string>
    <string name="est_id_">Est Id</string>
    <string name="_order_id">Order Id</string>
    <string name="_days">Days</string>
    <string name="_amount">Amount</string>
    <string name="_est_id">Est Id</string>
    <string name="_order_id_">Order Id</string>
    <string name="amount_">Amount</string>
    <string name="_est_id_">Est Id</string>
    <string name="_order__id_">Order Id</string>
    <string name="_amount_">Amount</string>
    <string name="bill_no">Bill No.</string>
    <string name="doctor">Doctor</string>
    <string name="date_time">Date Time</string>
    <string name="__amount">Amount</string>
    <string name="bill_id">bill id</string>
    <string name="doctor_name">doctor name</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="_nature">nature</string>
    <string name="__0000_">0000</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="rs">Rs</string>
    <string name="__0000__">0000</string>
    <string name="pay_now">Pay Now</string>
    <string name="appointment">Appointment</string>
    <string name="line">|</string>
    <string name="queue_management">Queue Management</string>
    <string name="_line__">|</string>
    <string name="billing">Billing</string>
    <string name="__line__">|</string>
    <string name="_order_booth_">Order Booth</string>
    <string name="dr_atul_prasad">Dr. Atul Prasad</string>
    <string name="_06_nsun">06\nSun</string>
    <string name="_01_nmon">01\nMon</string>
    <string name="_02_ntue">02\nTue</string>
    <string name="_03_nwed">03\nWed</string>
    <string name="_04_nthu">04\nThu</string>
    <string name="_05_nfri">05\nFri</string>
    <string name="_05_nsat">05\nSat</string>
    <string name="appointment_">APPOINTMENT</string>
    <string name="__line_">|</string>
    <string name="queue">QUEUE</string>
    <string name="_Line">|</string>
    <string name="_billing">BILLING</string>
    <string name="fill_cashcard">FILL CASHCARD</string>
    <string name="max_hospital">Max Hospital</string>
    <string name="opd_n6_00_pm_to_9_00_pm">OPD\n6:00 pm To 9:00 pm</string>
    <string name="_26th_aug_2015_nwednesday">26th Aug 2015\nWednesday</string>
    <string name="_max_hospital">Max Hospital</string>
    <string name="opd_n6_00_pm_to_9_00_pm_">OPD\n6:00 pm To 9:00 pm</string>
    <string name="_26th_aug_2015_nwednesday_">26th Aug 2015\nWednesday</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="you_want_to_cancel">you want to cancel?</string>
    <string name="patient_name_">Patient Name</string>
    <string name="_xxy">xxY</string>
    <string name="_gender">Gender</string>
    <string name="_hospital_id">Hospital ID:</string>
    <string name="_0000__">0000</string>
    <string name="_mrno">MRNO:</string>
    <string name="___0000__">0000</string>
    <string name="_ph">Ph:</string>
    <string name="_9999999999_">9999999999</string>
    <string name="_rs">Rs</string>
    <string name="online">Online</string>
    <string name="_pay_now">Pay Now</string>
    <string name="add_discount">Add Discount</string>
    <string name="discount_amount">Discount Amount: ₹</string>
    <string name="_0_0">0.0</string>
    <string name="_total">Total: ₹</string>
    <string name="_0_0_">0.0</string>
    <string name="_appointment">APPOINTMENT</string>
    <string name="_queue">QUEUE</string>
    <string name="_billing_">BILLING</string>
    <string name="_fill_cashcard">FILL CASHCARD</string>
    <string name="dr_atul_prasad_">Dr. Atul Prasad</string>
    <string name="check_in">Check-In</string>
    <string name="h_id">H Id</string>
    <string name="_patient_name_">Patient Name</string>
    <string name="_xxy_">xxY</string>
    <string name="m">M</string>
    <string name="mo">Mo.</string>
    <string name="xx_xxxxxxxxxx">+xx-xxxxxxxxxx</string>
    <string name="token_no">Token No.</string>
    <string name="upload_prescription">UPLOAD PRESCRIPTION</string>
    <string name="_appointment_">APPOINTMENT</string>
    <string name="_queue_">QUEUE</string>
    <string name="_billing__">BILLING</string>
    <string name="fill_cashcard_">FILL CASHCARD</string>
    <string name="_mrno_">Mrno</string>
    <string name="_mobile_">Mobile</string>
    <string name="_name_">Name</string>
    <string name="_add_discount">Add Discount</string>
    <string name="discount_name">Discount Name</string>
    <string name="_discount_amount">Discount Amount</string>
    <string name="alert">Alert!</string>
    <string name="do_you_want_to_move">Do you want to move?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pateint_name">Pateint Name</string>
    <string name="xx">XX</string>
    <string name="_m">M</string>
    <string name="nature_1">Nature 1</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="_6_00_pm">6:00 pm</string>
    <string name="__patient_name__">Patient Name</string>
    <string name="_xx_m">XX/M</string>
    <string name="enter_yout_reason_here">Enter yout reason here...</string>
    <string name="_cancel_">Cancel</string>
    <string name="_submit_">Submit</string>
    <string name="confirmation">Confirmation</string>
    <string name="doctor_name_">Doctor name</string>
    <string name="doctor_department_">Doctor Department</string>
    <string name="last_visit">Last Visit</string>
    <string name="no_record_found">No Record Found</string>
    <string name="_doctor_name">Doctor name</string>
    <string name="_doctor_department_">Doctor Department</string>
    <string name="before_checkin_please_complete">Before Checkin, Please complete</string>
    <string name="your_payment">your payment.</string>
    <string name="rs_000">Rs. 000/-</string>
    <string name="pay_now_">Pay Now</string>
    <string name="cancel_">Cancel</string>
    <string name="discount">Discount</string>
    <string name="_10">10%</string>
    <string name="_60">₹60</string>
    <string name="_120">₹120/-</string>
    <string name="enter_amount_">Enter Amount</string>
    <string name="no_last_record_found_">No Last Record Found</string>
    <string name="bill_no_">Bill No.</string>
    <string name="_doctor">Doctor</string>
    <string name="date_time_">Date Time</string>
    <string name="__amount_">Amount</string>
    <string name="bill_id_">bill id</string>
    <string name="_doctor_name_">doctor name</string>
    <string name="_date">date</string>
    <string name="_time">time</string>
    <string name="_nature_">nature</string>
    <string name="_pateint_name_">Pateint Name</string>
    <string name="rs_1_999">Rs. 1,999</string>
    <string name="please_choose_nature_to_n_upload_selected_pdf">Please choose nature to \n upload selected PDf.</string>
    <string name="amit_dubey">Amit Dubey</string>
    <string name="_9999999999__">9999999999</string>

    <string-array name="pharmacy_status">
        <item>All</item>
        <item>Pending</item>
        <item>Requested</item>
        <item>Billing Done</item>
        <item>Completed</item>
    </string-array>

</resources>
