<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alert"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/alert_message"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_move"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#cccccc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:id="@+id/alert_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#cccccc"/>
        <TextView
            android:id="@+id/alert_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>