<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_layout_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:layout_marginStart="@dimen/margin_20" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e1e1e1"
        android:padding="@dimen/text_14sp">

        <TextView
            android:id="@+id/add_patient_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_appointment_btn_bg_layer"
            android:text="@string/_cancel"
            android:textColor="@color/black"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/new_appointment_btn_bg_layer"
            android:text="@string/_submit"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_norm"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:background="@drawable/patient_image" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:background="@drawable/hospital_id_bg"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_hospital_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/hospital_id"
                    android:textColor="#a2a2a2"
                    android:textSize="@dimen/text_14sp" />

                <EditText
                    android:id="@+id/hospital_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:enabled="true"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textSize="@dimen/text_14sp"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/h_id"
                    android:layout_toEndOf="@+id/tv_hospital_id" />

                <ImageView
                    android:id="@+id/h_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/h"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <EditText
                android:id="@+id/patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:background="@drawable/new_pat_appointment_textbg"
                android:hint="@string/patient_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.mcura.jaideep.queuemanagement.view.SegmentedGroup
                    android:id="@+id/dob_age_segment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    segmentedgroup:sc_border_width="1dp"
                    segmentedgroup:sc_corner_radius="5dp"
                    segmentedgroup:sc_tint_color="#666">

                    <RadioButton
                        android:id="@+id/rb_dob"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dob" />

                    <RadioButton
                        android:id="@+id/rb_age"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/age" />
                </com.mcura.jaideep.queuemanagement.view.SegmentedGroup>

                <TextView
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:gravity="start"
                    android:hint="@string/date_of_birth"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp"
                    android:visibility="visible"
                    android:layout_marginEnd="2dp" />

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:gravity="start"
                    android:hint="@string/_age"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp"
                    android:visibility="gone"
                    android:layout_marginEnd="2dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/dob_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:gravity="center"
                    android:hint="@string/dd"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp"
                    android:layout_marginEnd="2dp" />

                <EditText
                    android:id="@+id/dob_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:gravity="center"
                    android:hint="@string/mm"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="2dp" />

                <EditText
                    android:id="@+id/dob_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:gravity="center"
                    android:hint="@string/yyyy"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp"
                    android:layout_marginStart="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:orientation="horizontal">


                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/male"
                        android:textColor="@color/black"
                        android:layout_marginStart="1dp" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/female"
                        android:textColor="@color/black"
                        android:layout_marginEnd="1dp" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:background="@drawable/new_pat_appointment_textbg"
                android:hint="@string/mobile"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_14sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:background="@drawable/new_pat_appointment_textbg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:id="@+id/show_detail_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/text_14sp"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:text="@string/add_address"
                android:textColor="#ff7f21" />


            <LinearLayout
                android:id="@+id/address_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_14sp"
                android:layout_marginRight="@dimen/text_14sp"
                android:layout_marginTop="@dimen/text_14sp"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/address1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:hint="@string/address_1"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp" />

                <EditText
                    android:id="@+id/address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_14sp"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:hint="@string/address_2"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp" />

                <EditText
                    android:id="@+id/zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_14sp"
                    android:background="@drawable/new_pat_appointment_textbg"
                    android:hint="@string/zip_code"
                    android:singleLine="true"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_14sp" />

                <Spinner
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_14sp"
                    android:background="@drawable/new_spiner" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_14sp"
                    android:background="@drawable/new_spiner" />

                <Spinner
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_14sp"
                    android:background="@drawable/new_spiner" />

                <Spinner
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_14sp"
                    android:layout_marginTop="@dimen/text_14sp"
                    android:background="@drawable/new_spiner" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>