<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_border">
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_20sp"
        android:textColor="@color/black"
        android:padding="@dimen/padding_05"
        android:layout_marginBottom="@dimen/margin_05"
        android:text="Enter reason here" />
    <EditText
        android:id="@+id/etReason"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_grey"
        android:gravity="top"
        android:layout_margin="@dimen/margin_05"
        android:background="@drawable/et_setting_bg"
        android:hint="@string/enter_yout_reason_here"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAlertCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main_layout_background"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="@dimen/padding_05"
            android:text="@string/_cancel_"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAlertSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:padding="@dimen/padding_05"
            android:text="@string/_submit_"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>